--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "better-sqlite3-helper",
+  "name": "@justinbeckwith/better-sqlite3-helper",
   "version": "3.1.6",
   "description": "A wrapper library that eases the work with better-sqlite3 with some new functions and a migration-system",
   "main": "src/database.js",
@@ -21,17 +21,12 @@
     "better-sqlite3"
   ],
   "dependencies": {
-    "better-sqlite3": "^7.1.2",
+    "better-sqlite3": "^9.0.0",
     "mkdirp": "^1.0.4"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.1.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.1",
     "mocha": "^9.1.3"
   },
   "optionalDependencies": {
